feat(auth): Add auth middleware and implement login

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,6 @@
 PORT=YourPort
 MONGO_URI=YourMongoDbUrl
+JWT_SECRET=your_access_token
+JWT_REFRESH_SECRET=your_refresh_token
+JWT_ACCESS_EXPIRATION=your_access_expire_time
+JWT_REFRESH_EXPIRATION=your_refresh_expire_time
