--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "gravatar": "^1.8.2",
+    "history": "^5.3.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "redux-mock-store": "^1.5.5",
     "sass": "^1.86.1"
   },
   "devDependencies": {
