--- a/backend/package.json
+++ b/backend/package.json
@@ -19,5 +19,9 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.0",
+    "vitest": "^3.1.1"
   }
 }
