--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^9.1.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "jsdom": "^26.1.0",
+    "redux-mock-store": "^1.5.5",
+    "sass-embedded": "^1.86.3",
+    "vitest": "^3.1.1"
   }
 }
