--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
