--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "jsdom": "^26.1.0",
+    "mongodb-memory-server": "^10.1.4",
     "redux-mock-store": "^1.5.5",
     "sass-embedded": "^1.86.3",
     "vitest": "^3.1.1"
