--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
+    "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.1.0",
     "vitest": "^3.1.1"
   }
